# zpf2022

./: .gitignore  Prezentacje230613.txt  Prezentacje230706.txt  README.md  flake.nix
Code/Concur/: geturls1.hs  geturls3.hs  stack.yaml
Code/Par/: Makefile  badfib.eventlog  stack.yaml  sudoku1.hs  sudoku3.hs  sudoku3b.eventlog  sudoku4.hs  zpf-par.cabal
Code/Promo/: Currency.hs  MyLib.hs  Promo.hs  Singletons.hs  TypeEqConstraints.hs  TypeEquality.hs  stack.yaml-18.28  zpf-promo.cabal
Code/TH/: Power.hs
Code/TH/BnfcMeta/: BnfcMeta-example.cabal
Code/TH/BnfcMeta/app/: Expr.hs  Main.hs
Code/TH/Here/: Ask.hs
Code/TH/List2Tuple/: List2Tuple.hs  Main.hs  Makefile
Code/TH/Projections/: Build1.hs  Build2.hs  Build3.hs  Declare1.hs  Declare2.hs
Code/TH/QQ/: BuildExpr.hs  Expr.hs  Expr2.hs  ExprQuoteManual.hs  Simpl0.hs  Simpl1.hs  Simpl2.hs  TestBuildExpr.hs  stack.yaml
Code/TH/Reify/: Derive.hs  Main.hs  fields.cabal
Lab/: lab01-typy.md  lab02-testy.md  lab10-meta.md  lab11par.md  lab12-concur.md
Slides/: wyklad.mk
Slides/01Typ1/: 01typy.md  Associated.hs  ConCol.hs  FibST.hs  Mul1.hs  Newtype.hs
Slides/02QC/: 02QC.cabal  02testy.md  QuickCheck11.hs  SimpleCheck.hs  SimpleCheck1.hs  SimpleCheck2.hs  Sort1.hs  Sort11.hs  Square.hs  Tree3.hs  insert.hs  roll.hs
Slides/03TH/: 03meta.md
Slides/10TH/: 10meta.md
Slides/11Par/: 11par.md
Slides/12Concur/: 12concur.md
Slides/13Promo/: 13promo.md  Makefile
www/: 01typy-slides.html  01typy.html  02testy-slides.html  02testy.html  03meta-slides.html  03meta.html  10meta-slides.html  10meta.html  11par-slides.html  11par.html  12concur-slides.html  12concur.html  13promo-slides.html  13promo.html
