cabal-version:      3.0
name:               02QC
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Marcin Benke
maintainer:         marcin@benke.org
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  SimpleCheck1
    -- other-modules:
    -- other-extensions:
    build-depends:
      base >=4.1,
      random >= 1.1,
      QuickCheck >= 2.1,
    hs-source-dirs:   .
    default-language: GHC2021
