cabal-version:       3.4
name:                fields
version:             0.0.0.1
-- synopsis:            
-- description:         
-- license:             BSD-3-Clause
-- license-file:        LICENSE
author:              Marcin Benke
maintainer:          marcin.benke@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  

executable fields
  main-is:             Main.hs
  other-modules:       Derive
  other-extensions:    TemplateHaskell
  build-depends:       base >=4.7, template-haskell
  -- hs-source-dirs:      
  default-language:    Haskell2010

